refactor: split into 6 Gradle modules with convention plugins (Phase 4)
Physically enforce the hexagonal layers as separate Gradle modules so the
dependency direction is guaranteed by the build, not just by ArchUnit:

  :domain (pure) <- :port, :observability
  :domain + :port <- :application, :infrastructure
  all of the above <- :app (cli + Main + shadow + jpackage/jlink + qpdf staging)

- build-logic/ included build holds three convention plugins (java / test /
  quality) so toolchain, Error Prone + NullAway, Spotless, SpotBugs, JaCoCo, and
  the Javadoc doclint gate are configured once and shared.
- Per-module coverage floors (domain 0.95/0.90, application 0.85/0.65,
  infrastructure 0.75/0.60); pitest on :domain + :application. PDFBox/qpdf are
  confined to :infrastructure, commons-cli + logback to :app by classpath.
- ArchUnit slimmed to the two rules the module graph cannot enforce
  (strategy-only-via-application, no package cycles); the rest are now
  compile-enforced. testFixtures split: PdfFixtures to :infrastructure,
  CapturingProgressListener to :application.
- Add domain unit tests (DocumentMetadata/PdfVersion/MemoryMode) and a
  SpreadOptions edge case to hold the floors under module isolation.
- Repoint checkExtraVersions regexes to the convention plugins, and the
  justfile / CI / bench-runtime paths to app/build/.

Also remove a private/copyrighted PDF corpus (book titles) from the benchmark
defaults and anonymise it in docs/perf-runtime.md -- the repo is OSS.

just check and just smoke both green across all six modules.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>